cluster/core/traefik/dashboard-ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: traefik-dashboard
    namespace: kube-system
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-staging
        traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
    ingressClassName: traefik
    rules:
        - host: ENC[AES256_GCM,data:P7QmhZF5JzTID7h+Hk7r7P3hGEZfvW+n5/+5ZSNe,iv:eUcQ8GBYnJoqs6RvVKvahpgRjYw567dXfuRvUJYVDLU=,tag:abyJxmGqWa0lKDS2X8b7Aw==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: traefik
                        port:
                            number: 9000
    tls:
        - hosts:
            - ENC[AES256_GCM,data:3LW5hbsuu49htcoCNxEipTRd3+wK3L5f06poo3tF,iv:c1CRpRDvtGmwzMlUI7PfbGaLP+PMY2RvNXoRoUO/L5c=,tag:caJLS+TRXNfrtyrp5Tsh4A==,type:str]
          secretName: traefik-dashboard-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2021-11-05T01:30:44Z"
    mac: ENC[AES256_GCM,data:ZXDsCt6DXy85EH09NLJ4q2PB532kaYvGJvxU/dxpAHWBZ3wmlHQXkzIx5H9kHVrRaPoUTBQ/eMT+zntmwwQa6/mdAc8i1qUMJtvhP/wrGWgFtcC1YzvhehgvIXDcbNmyQdSjCxGCDm5JeuPvwYBlrMC5o22n6dfsxaQd98bzW8g=,iv:4/TD0RCC9uwefBLHjRaUMjReY7OGPkNfKc4JE74qHoQ=,tag:W3Z9ldlubY90fTNCFyF2wA==,type:str]
    pgp:
        - created_at: "2021-11-03T22:55:39Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA80P3erPiRpkARAApCxg1y8WMINVVW6tFZiYheBI5M8PhmeStjS8zeWCjWKw
[...]
            =OSVv
            -----END PGP MESSAGE-----
          fp: F92C1A4A2B35F826A1E364EFF5A1747BE18D04FC
    encrypted_regex: ^(helm|data|stringData|networkPath|hosts?|loadBalancerIP|image|email|dnsZones|dnsNames|match)$
    version: 3.7.1
